--- a/index.html
+++ b/index.html
@@ -140,35 +140,28 @@
     }
 
     async function presensi(nama) {
-      const button = Array.from(buttons).find(btn => btn.innerText === nama);
-      button.disabled = true;
+  const button = Array.from(buttons).find(btn => btn.innerText === nama);
+  button.disabled = true;
 
-      try {
-        // Periksa lokasi pengguna
-        await checkLocation();
+  try {
+    // Periksa lokasi pengguna
+    await checkLocation();
 
-        // Kirim data ke Google Apps Script dengan menghindari CORS
-        const response = await fetch('https://script.google.com/macros/s/AKfycbw-Cfx8jKwxlPj2-MzMhu0dt59O2smwuwOWQrBl3RZA2PDfszY_5brZdIoNMvvm9KHvKA/exec?_method=POST', {
-          method: 'POST',
-          body: JSON.stringify({ nama }),
-          headers: { 'Content-Type': 'application/json' },
-        });
-        const result = await response.json();
+    // Kirim data ke Google Form
+    const formUrl = `https://docs.google.com/forms/d/e/1Owh0a4ptMqtrjOqReWF2TiuTApSQ0OswVLKatkixJdI/formResponse?usp=pp_url&entry.1378834565=${encodeURIComponent(nama)}`;
+    await fetch(formUrl, { mode: 'no-cors' });
 
-        if (result.status === "success") {
-          button.innerText = `${nama} - Sudah Datang`;
-          const waktu = new Date().toLocaleTimeString();
-          confirmationMessage.innerText = `${nama} pukul ${waktu}`;
-          confirmation.style.display = 'block';
-          statusMessage.innerText = "";
-        } else {
-          statusMessage.innerText = result.message;
-        }
-      } catch (error) {
-        statusMessage.innerText = "Terjadi kesalahan. Silakan coba lagi.";
-        button.disabled = false;
-      }
-    }
+    // Tampilkan konfirmasi
+    button.innerText = `${nama} - Sudah Datang`;
+    const waktu = new Date().toLocaleTimeString();
+    confirmationMessage.innerText = `${nama} pukul ${waktu}`;
+    confirmation.style.display = 'block';
+    statusMessage.innerText = "";
+  } catch (error) {
+    statusMessage.innerText = "Terjadi kesalahan. Silakan coba lagi.";
+    button.disabled = false;
+  }
+}
   </script>
 </body>
 </html>
