--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistem Presensi</title>
+  <title>Pendataan Presensi</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -63,7 +63,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Sistem Presensi</h1>
+    <h1>Sistem Pendataan Presensi</h1>
     <div class="button-container">
       <button onclick="presensi('Deva Mandela')">Deva Mandela</button>
       <button onclick="presensi('Dwi Indo')">Dwi Indo</button>
