--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
       margin: 0;
       padding: 20px;
     }
+    .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Latar belakang semi-transparan */
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+    backdrop-filter: blur(5px); /* Efek blur */
+    z-index: 1000; /* Pastikan footer selalu di atas elemen lain */
+  }
     .container {
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(10px);
@@ -81,6 +94,10 @@
     <p id="statusMessage" style="margin-top: 1rem;"></p>
   </div>
 
+  <footer class="footer">
+  &copy; 2023 Shahaba SD & Prasekolah. All rights reserved.
+  </footer>
+  
   <script>
     const buttons = document.querySelectorAll('button');
     const statusMessage = document.getElementById('statusMessage');
