--- a/try.html
+++ b/try.html
@@ -157,6 +157,9 @@
     }
 
     async function presensi(nama) {
+      if (!confirm(`Apakah Anda yakin ingin melakukan presensi sebagai ${nama}?`)) {
+        return; // Batalkan jika pengguna tidak yakin
+      }
       const button = Array.from(buttons).find(btn => btn.innerText === nama);
       button.disabled = true;
 
