--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   } catch (error) {
     // Tampilkan pesan error
     statusMessage.innerText = error;
-    statusMessage.style.color = "#ff6b6b"; // Warna merah untuk pesan error
+    statusMessage.style.color = "#a20000"; // Warna merah untuk pesan error
     button.disabled = false; // Aktifkan kembali tombol
   }
 }
