--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pendataan Presensi</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
+    :root {
+      --primary-color: #00245a;
+      --secondary-color: #000f23;
+      --success-color: #4caf50;
+      --error-color: #f44336;
+      --background-gradient: linear-gradient(-45deg, #6b6721, #ad5c00, #003b93, #002d67);
+      --text-color: white;
+    }
+
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #0d47a1, #1a73e8);
-      color: white;
+      font-family: Arial, sans-serif;
+      background: var(--background-gradient);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      color: var(--text-color);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,19 +28,13 @@
       margin: 0;
       padding: 20px;
     }
-    .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Latar belakang semi-transparan */
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    font-size: 14px;
-    backdrop-filter: blur(5px); /* Efek blur */
-    z-index: 1000; /* Pastikan footer selalu di atas elemen lain */
-  }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .container {
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(10px);
@@ -38,16 +44,31 @@
       max-width: 800px;
       width: 90%;
       text-align: center;
+      animation: fadeIn 1s ease-in-out;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     h1 {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin-bottom: 1.5rem;
+      animation: slideIn 1s ease-in-out;
     }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateX(-20px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+
     .button-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
       gap: 1rem;
     }
+
     button {
       padding: 1rem;
       font-size: 1rem;
@@ -58,28 +79,66 @@
       cursor: pointer;
       transition: all 0.3s ease;
     }
-    button:disabled {
-      background: rgba(0, 93, 14, 0.621);
-      border-color: rgba(255, 255, 255, 0.1);
-      cursor: not-allowed;
-    }
+
     button:hover:not(:disabled) {
-      background: rgba(97, 255, 149, 0.2);
+      background: rgba(6, 158, 54, 0.758);
       border-color: rgba(255, 255, 255, 0.4);
       transform: translateY(-5px);
     }
+
+    button:disabled {
+      background: rgba(0, 74, 11, 0.872);
+      border-color: rgba(255, 255, 255, 0.1);
+      cursor: not-allowed;
+    }
+
+    .footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 14px;
+      backdrop-filter: blur(5px);
+      z-index: 1000;
+    }
+
     .confirmation {
       display: none;
       margin-top: 2rem;
+      animation: fadeIn 0.5s ease-in-out;
     }
-    #statusMessage {
+
+    #loading {
+      display: none;
       margin-top: 1rem;
-      font-size: 0.9rem;
-      color: #ffffff; /* Warna default */
+      font-size: 1.2rem;
     }
-    
-    #statusMessage.error {
-      color: #ff6b6b; /* Warna merah untuk pesan error */
+
+    #loading i {
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        padding: 1rem;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      .button-container {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      }
     }
   </style>
 </head>
@@ -96,6 +155,9 @@
       <button onclick="presensi('Nandar Sunandar')">Nandar Sunandar</button>
       <button onclick="presensi('Salma Satira Askar')">Salma Satira Askar</button>
     </div>
+    <div id="loading">
+      <i class="fas fa-spinner"></i> Memproses...
+    </div>
     <div id="confirmation" class="confirmation">
       <h2>Pendataan Berhasil</h2>
       <p id="confirmationMessage"></p>
@@ -104,14 +166,16 @@
   </div>
 
   <footer class="footer">
-  &copy; 2025 Shahaba SD & Prasekolah. All rights reserved.
+    &copy; 2025 Shahaba SD & Prasekolah. All rights reserved.
   </footer>
-  
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
     const buttons = document.querySelectorAll('button');
     const statusMessage = document.getElementById('statusMessage');
     const confirmation = document.getElementById('confirmation');
     const confirmationMessage = document.getElementById('confirmationMessage');
+    const loading = document.getElementById('loading');
 
     // Lokasi yang diizinkan
     const allowedLocations = [
@@ -146,7 +210,7 @@
               const userLat = position.coords.latitude;
               const userLng = position.coords.longitude;
 
-              // Cek apakah pengguna berada dalam radius 20 meter dari salah satu lokasi yang diizinkan
+              // Cek apakah pengguna berada dalam radius 20 m dari salah satu lokasi yang diizinkan
               const isWithinRadius = allowedLocations.some(
                 (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 20
               );
@@ -166,32 +230,51 @@
     }
 
     async function presensi(nama) {
+        const { isConfirmed } = await Swal.fire({
+    title: `Apakah Anda ${nama}?`,
+    text: "Pendataan presensi tidak dapat diwakilkan.",
+    icon: "question",
+    showCancelButton: true,
+    confirmButtonText: `Ya, Saya ${nama}`,
+    cancelButtonText: "Kembali",
+  });
+
+  if (!isConfirmed) {
+    return; // Batalkan jika pengguna memilih "Kembali"
+  }
+
   const button = Array.from(buttons).find(btn => btn.innerText === nama);
   button.disabled = true;
+  loading.style.display = 'block'; // Tampilkan loading indicator
 
   try {
     // Periksa lokasi pengguna
     await checkLocation();
 
     // Kirim data ke Google Apps Script
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbw-Cfx8jKwxlPj2-MzMhu0dt59O2smwuwOWQrBl3RZA2PDfszY_5brZdIoNMvvm9KHvKA/exec?nama=${encodeURIComponent(nama)}`);
+    const response = await fetch(`https://script.google.com/macros/s/AKfycbysZpYeJ1Gr8TctQ-DC_VH3pYpQTrZvhiqebICeOV4Z2PsOAddECpPO4koTeLHMHFRfmg/exec?nama=${encodeURIComponent(nama)}`);
     const result = await response.text();
 
-    // Tampilkan konfirmasi
+    // Tampilkan pesan sukses dengan SweetAlert2
+    await Swal.fire({
+      icon: 'success',
+      title: 'Presensi Berhasil',
+      text: `Presensi ${nama} telah dicatat.`,
+    });
+
+    // Tampilkan konfirmasi di halaman
     button.innerText = `${nama} - Sudah Datang`;
     const waktu = new Date().toLocaleTimeString();
-
-    // Tambahkan ke daftar list kedatangan
-    const listItem = document.createElement('li');
-    listItem.textContent = `${nama} - ${waktu}`;
-    attendanceItems.appendChild(listItem);
-
+    confirmationMessage.innerText = `${nama} pukul ${waktu}`;
+    confirmation.style.display = 'block';
     statusMessage.innerText = "";
   } catch (error) {
     // Tampilkan pesan error
     statusMessage.innerText = error;
-    statusMessage.style.color = "#a20000"; // Warna merah untuk pesan error
-    button.disabled = false; // Aktifkan kembali tombol
+    statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color'); // Perbaikan di sini
+    button.disabled = false;
+  } finally {
+    loading.style.display = 'none'; // Sembunyikan loading indicator
   }
 }
   </script>
