--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     });
 
     // Tampilkan konfirmasi di halaman
-    button.innerText = `${nama} - Sudah Datang`;
+    button.innerText = `${nama} - Sudah datang`;
     const waktu = new Date().toLocaleTimeString();
     confirmationMessage.innerText = `${nama} pukul ${waktu}`;
     confirmation.style.display = 'block';
