--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       --secondary-color: #000f23;
       --success-color: #4caf50;
       --error-color: #f44336;
-      --background-gradient: linear-gradient(-45deg, #f0b100, #e15f0e, #172e69, #000f34);
+      --background-gradient: linear-gradient(-45deg, #e15f0e, #f0b100, #172e69, #000f34);
       --text-color: white;
     }
 
