--- a/index.html
+++ b/index.html
@@ -50,6 +50,37 @@
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+    .curve {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background: white;
+      border-radius: 0 0 50% 50%;
+      transform: scaleX(1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .curve h1 {
+      color: var(--primary-color);
+      font-size: 2rem;
+      margin: 0;
+      font-weight: bold;
+    }
+
+    .curve h2 {
+      color: var(--secondary-color);
+      font-size: 1.2rem;
+      margin: 0;
+      font-weight: normal;
+    }
+
+
+
 
     h1 {
       font-size: 1.5rem;
@@ -149,8 +180,12 @@
   </style>
 </head>
 <body>
+  <div class="curve">
+    <h1>Shahaba</h1>
+    <h2>Sistem Pendataan Presensi</h2>
+  </div>
   <div class="container">
-    <h1><i class="fas fa-calendar-check"></i> Sistem Pendataan Presensi</h1>
+    <h1><i class="fas fa-calendar-check"></i> Klik nama untuk merekam pendataan presensi</h1>
     <div class="button-container">
       <div class="button-container">
         <button onclick="presensi('Deva Mandela')">Deva Mandela</button>
