--- a/try.html
+++ b/try.html
@@ -11,7 +11,7 @@
       --secondary-color: #000f23;
       --success-color: #4caf50;
       --error-color: #f44336;
-      --background-gradient: linear-gradient(-45deg, #8e8820, #c06e11, #003b93, #002d67);
+      --background-gradient: linear-gradient(-45deg, #e15f0e, #f0b100, #172e69, #000f34);
       --text-color: white;
     }
 
@@ -38,19 +38,47 @@
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(1px);
       padding: 2rem;
-      border-radius: 15px;
+      border-radius: 25px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
       max-width: 800px;
       width: 90%;
       text-align: center;
       animation: fadeIn 1s ease-in-out;
+      margin-top: 120px; /* Tambahkan margin atas agar tidak menutupi judul */
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+    .curve {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background: white;
+      border-radius: 0 0 50% 50%;
+      transform: scaleX(1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
+    .curve h1 {
+      color: var(--primary-color);
+      font-size: 2rem;
+      margin: 0;
+      font-weight: bold;
+    }
+
+    .curve h2 {
+      color: var(--secondary-color);
+      font-size: 1rem;
+      margin: 0;
+      font-weight: normal;
+    }
     h1 {
       font-size: 1.5rem;
       margin-bottom: 1.5rem;
@@ -71,10 +99,10 @@
     button {
       padding: 1rem;
       font-size: 1rem;
-      background: rgba(154, 185, 197, 0.189);
+      background: rgba(115, 115, 115, 0.468);
       border: 2px solid rgba(255, 255, 255, 0.2);
       color: white;
-      border-radius: 10px;
+      border-radius: 15px;
       cursor: pointer;
       transition: all 0.3s ease;
     }
@@ -110,7 +138,14 @@
       margin-top: 2rem;
       animation: fadeIn 0.5s ease-in-out;
     }
-
+    #statusMessage {
+      color: var(--error-color); /* Warna merah */
+      background: rgb(255, 255, 255); /* Background semi-transparan */
+      padding: 3px; /* Tambahkan padding */
+      border-radius: 10px; /* Bulatkan sudut */
+      font-size: 1rem; /* Perbesar ukuran font */
+      margin-top: 1rem;
+    }
     #loading {
       display: none;
       margin-top: 1rem;
@@ -142,8 +177,12 @@
   </style>
 </head>
 <body>
+  <div class="curve">
+    <h1>Shahaba</h1>
+    <h2>Sistem Pendataan Presensi</h2>
+  </div>
   <div class="container">
-    <h1><i class="fas fa-calendar-check"></i> Sistem Pendataan Presensi</h1>
+    <h4><i class="fas fa-calendar-check"></i> Klik nama untuk mencatat presensi</h4>
     <div class="button-container">
       <div class="button-container">
         <button onclick="presensi('Deva Mandela')">Deva Mandela</button>
@@ -172,66 +211,107 @@
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
-    const buttons = document.querySelectorAll('button');
-    const statusMessage = document.getElementById('statusMessage');
-    const confirmation = document.getElementById('confirmation');
-    const confirmationMessage = document.getElementById('confirmationMessage');
-    const loading = document.getElementById('loading');
+// Langsung kirim IP ke Apps Script tanpa menampilkan ke user
 
-    // Lokasi yang diizinkan
-    const allowedLocations = [
-      { lat: -6.589108056587621, lng: 106.8218295143879 }, // Lokasi 1 (Shahaba Ruko Tanah Baru Residence)
-      { lat: -6.592279, lng: 106.822581 } // Lokasi 2 (Shahaba Jl. Swadaya)
-    ];
+const buttons = document.querySelectorAll('button');
+const statusMessage = document.getElementById('statusMessage');
+const confirmation = document.getElementById('confirmation');
+const confirmationMessage = document.getElementById('confirmationMessage');
+const loading = document.getElementById('loading');
 
-    // Fungsi untuk menghitung jarak antara dua koordinat (dalam meter)
-    function calculateDistance(lat1, lon1, lat2, lon2) {
-      const R = 6371e3; // Radius bumi dalam meter
-      const φ1 = (lat1 * Math.PI) / 180;
-      const φ2 = (lat2 * Math.PI) / 180;
-      const Δφ = ((lat2 - lat1) * Math.PI) / 180;
-      const Δλ = ((lon2 - lon1) * Math.PI) / 180;
+// Lokasi yang diizinkan
+const allowedLocations = [
+  { lat: -6.589108056587621, lng: 106.8218295143879 }, // Lokasi 1 (Shahaba Ruko Tanah Baru Residence)
+  { lat: -6.592279, lng: 106.822581 } // Lokasi 2 (Shahaba Jl. Swadaya)
+];
 
-      const a =
-        Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
-        Math.cos(φ1) * Math.cos(φ2) * Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+// Fungsi untuk menghitung jarak antara dua koordinat (dalam meter)
+function calculateDistance(lat1, lon1, lat2, lon2) {
+  const R = 6371e3; // Radius bumi dalam meter
+  const φ1 = (lat1 * Math.PI) / 180;
+  const φ2 = (lat2 * Math.PI) / 180;
+  const Δφ = ((lat2 - lat1) * Math.PI) / 180;
+  const Δλ = ((lon2 - lon1) * Math.PI) / 180;
 
-      return R * c;
-    }
+  const a =
+    Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
+    Math.cos(φ1) * Math.cos(φ2) * Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
+  const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
 
-    // Fungsi untuk memeriksa lokasi pengguna
-    function checkLocation() {
-      return new Promise((resolve, reject) => {
-        if (!navigator.geolocation) {
-          reject("Geolocation tidak didukung di browser ini.");
-        } else {
-          navigator.geolocation.getCurrentPosition(
-            (position) => {
-              const userLat = position.coords.latitude;
-              const userLng = position.coords.longitude;
+  return R * c;
+}
 
-              // Cek apakah pengguna berada dalam radius 100 km dari salah satu lokasi yang diizinkan
-              const isWithinRadius = allowedLocations.some(
-                (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 100000
-              );
+// Fungsi untuk memeriksa lokasi pengguna
+function checkLocation() {
+  return new Promise((resolve, reject) => {
+    if (!navigator.geolocation) {
+      reject("Geolocation tidak didukung di browser ini.");
+    } else {
+      navigator.geolocation.getCurrentPosition(
+        (position) => {
+          const userLat = position.coords.latitude;
+          const userLng = position.coords.longitude;
 
-              if (isWithinRadius) {
-                resolve();
-              } else {
-                reject("Anda berada di luar radius yang diizinkan.");
-              }
-            },
-            (error) => {
-              reject("Gagal mendapatkan lokasi: " + error.message);
-            }
+          // Cek apakah pengguna berada dalam radius 100 km dari salah satu lokasi yang diizinkan
+          const isWithinRadius = allowedLocations.some(
+            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 100000
           );
-        }
-      });
-    }
 
-    async function presensi(nama) {
-        const { isConfirmed } = await Swal.fire({
+          if (isWithinRadius) {
+            resolve();
+          } else {
+            reject("Anda berada di luar radius yang diizinkan.");
+          }
+        },
+        (error) => {
+          reject("Gagal mendapatkan lokasi: " + error.message);
+        }
+      );
+    }
+  });
+}
+
+// Fungsi untuk mendapatkan alamat IP
+async function getIPAddress() {
+  try {
+    const response = await fetch('https://api.ipify.org?format=json');
+    const data = await response.json();
+    return data.ip;
+  } catch (error) {
+    console.error("Gagal mendapatkan alamat IP:", error);
+    return null;
+  }
+}
+
+// Fungsi untuk memeriksa status tombol dari spreadsheet
+async function getButtonStatus() {
+  try {
+    const response = await fetch(`https://script.google.com/macros/s/AKfycbysZpYeJ1Gr8TctQ-DC_VH3pYpQTrZvhiqebICeOV4Z2PsOAddECpPO4koTeLHMHFRfmg/exec?action=getStatus`);
+    const data = await response.json();
+    return data;
+  } catch (error) {
+    console.error("Gagal memeriksa status tombol:", error);
+    return {};
+  }
+}
+
+// Fungsi untuk menonaktifkan tombol berdasarkan status
+async function updateButtonStatus() {
+  const status = await getButtonStatus();
+  const buttons = document.querySelectorAll('button');
+
+  buttons.forEach(button => {
+    const nama = button.innerText;
+    if (status[nama] === "Nonaktif") {
+      button.disabled = true;
+      button.innerText = `${nama} - Sudah Datang`;
+    }
+  });
+}
+
+// Fungsi presensi
+async function presensi(nama) {
+  const { isConfirmed } = await Swal.fire({
     title: `Apakah Anda ${nama}?`,
     text: "Pendataan presensi tidak dapat diwakilkan.",
     icon: "question",
@@ -253,7 +333,8 @@
     await checkLocation();
 
     // Kirim data ke Google Apps Script
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbysZpYeJ1Gr8TctQ-DC_VH3pYpQTrZvhiqebICeOV4Z2PsOAddECpPO4koTeLHMHFRfmg/exec?nama=${encodeURIComponent(nama)}`);
+    const ip = await getIPAddress();
+    const response = await fetch(`https://script.google.com/macros/s/AKfycbysZpYeJ1Gr8TctQ-DC_VH3pYpQTrZvhiqebICeOV4Z2PsOAddECpPO4koTeLHMHFRfmg/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`);
     const result = await response.text();
 
     // Tampilkan pesan sukses dengan SweetAlert2
@@ -263,7 +344,7 @@
       text: `Presensi ${nama} telah dicatat.`,
     });
 
-    // Tampilkan konfirmasi di halaman
+    // Update tampilan tombol
     button.innerText = `${nama} - Sudah Datang`;
     const waktu = new Date().toLocaleTimeString();
     confirmationMessage.innerText = `${nama} pukul ${waktu}`;
@@ -272,12 +353,17 @@
   } catch (error) {
     // Tampilkan pesan error
     statusMessage.innerText = error;
-    statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color'); // Perbaikan di sini
+    statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color');
     button.disabled = false;
   } finally {
     loading.style.display = 'none'; // Sembunyikan loading indicator
   }
 }
+
+// Periksa status tombol saat halaman dimuat
+window.onload = async () => {
+  await updateButtonStatus();
+};
   </script>
 </body>
 </html>
