--- a/try.html
+++ b/try.html
@@ -212,6 +212,8 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
 // Langsung kirim IP ke Apps Script tanpa menampilkan ke user
+// Hapus fungsi displayIPAddress dan penggunaannya
+// Langsung kirim IP ke Apps Script tanpa menampilkan ke user
 
 const buttons = document.querySelectorAll('button');
 const statusMessage = document.getElementById('statusMessage');
@@ -283,32 +285,6 @@ async function getIPAddress() {
   }
 }
 
-// Fungsi untuk memeriksa status tombol dari spreadsheet
-async function getButtonStatus() {
-  try {
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbzizcDsuO-oSLEbJP9e2Ui22bvx4fLIM8vdPL5XY6mSyqOuzlpLkMKWxGAmETjXzKzCOg/exec?action=getStatus`);
-    const data = await response.json();
-    return data;
-  } catch (error) {
-    console.error("Gagal memeriksa status tombol:", error);
-    return {};
-  }
-}
-
-// Fungsi untuk menonaktifkan tombol berdasarkan status
-async function updateButtonStatus() {
-  const status = await getButtonStatus();
-  const buttons = document.querySelectorAll('button');
-
-  buttons.forEach(button => {
-    const nama = button.innerText;
-    if (status[nama] === "Nonaktif") {
-      button.disabled = true;
-      button.innerText = `${nama} - Sudah Datang`;
-    }
-  });
-}
-
 // Fungsi presensi
 async function presensi(nama) {
   const { isConfirmed } = await Swal.fire({
@@ -334,7 +310,7 @@ async function presensi(nama) {
 
     // Kirim data ke Google Apps Script
     const ip = await getIPAddress();
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbysZpYeJ1Gr8TctQ-DC_VH3pYpQTrZvhiqebICeOV4Z2PsOAddECpPO4koTeLHMHFRfmg/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`);
+    const response = await fetch(`https://script.google.com/macros/s/AKfycby8IrGzgkOVV1YXsn6FDPDJqdgBqB5NxJLKvPm1GitDzahsla0aNym_idF9jFdU3pba0g/exec?nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`);
     const result = await response.text();
 
     // Tampilkan pesan sukses dengan SweetAlert2
@@ -344,7 +320,7 @@ async function presensi(nama) {
       text: `Presensi ${nama} telah dicatat.`,
     });
 
-    // Update tampilan tombol
+    // Tampilkan konfirmasi di halaman
     button.innerText = `${nama} - Sudah Datang`;
     const waktu = new Date().toLocaleTimeString();
     confirmationMessage.innerText = `${nama} pukul ${waktu}`;
@@ -360,10 +336,6 @@ async function presensi(nama) {
   }
 }
 
-// Periksa status tombol saat halaman dimuat
-window.onload = async () => {
-  await updateButtonStatus();
-};
   </script>
 </body>
 </html>
