--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@ function checkLocation() {
           const userLat = position.coords.latitude;
           const userLng = position.coords.longitude;
 
-          // Cek apakah pengguna berada dalam radius 100 km dari salah satu lokasi yang diizinkan
+          // Cek apakah pengguna berada dalam radius 20 m dari salah satu lokasi yang diizinkan
           const isWithinRadius = allowedLocations.some(
-            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 100000
+            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 20
           );
 
           if (isWithinRadius) {
