--- a/try.html
+++ b/try.html
@@ -178,23 +178,22 @@
         a {
             text-decoration: none;
             padding: 10px 20px;
-            background-color: #172e69;
-            color: white;
+            background-color: #ffffff;
+            color: #172e69;
             border-radius: 15px;
-            border: 2px solid #a0a0a0;
             cursor: pointer;
             display: inline-block;
         }
 
         a:hover {
-            background-color: #3563d6;
+            background-color: #001f40;
             border-color: #a0a0a0;
-            border: 2px;
             display: inline-block;
+            color: #ffffff;
         }
 
         a:active {
-            background-color: #172e69;
+            background-color: #2548a1;
             border-color: #5c5c5c;
         }
         }
