--- a/index.html
+++ b/index.html
@@ -3,378 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pendataan Presensi</title>
+  <title>Presensi Shahaba</title>
+  <link rel="icon" href="assets/icons/priority.svg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    :root {
-      --primary-color: #00245a;
-      --secondary-color: #000f23;
-      --success-color: #4caf50;
-      --error-color: #f44336;
-      --background-gradient: linear-gradient(-45deg, /*#e15f0e, #f0b100,*/ #0048ff, #000f34);
-      --text-color: white;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--background-gradient);
-      background-size: 400% 400%;
-      /* animation: gradientBG 15s ease infinite; */
-      color: var(--text-color);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-      padding: 20px;
-    }
-    /*@keyframes gradientBG {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }*/
-
-    .container {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(1px);
-      padding: 2rem;
-      border-radius: 25px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-      max-width: 800px;
-      width: 90%;
-      text-align: center;
-      animation: fadeIn 1s ease-in-out;
-      margin-top: 30px; /* Tambahkan margin atas agar tidak menutupi judul */
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .curve {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100px;
-      background: white;
-      border-radius: 0 0 50% 50%;
-      transform: scaleX(1);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .curve h1 {
-      color: var(--primary-color);
-      font-size: 2rem;
-      margin: 0;
-      font-weight: bold;
-    }
-
-    .curve h2 {
-      color: var(--secondary-color);
-      font-size: 1rem;
-      margin: 0;
-      font-weight: normal;
-    }
-    h1 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      /*animation: slideIn 1s ease-in-out;*/
-    }
-
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateX(-20px); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-
-    .button-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 1rem;
-    }
-
-    button {
-      padding: 1rem;
-      font-size: 1rem;
-      background: rgba(115, 115, 115, 0.468);
-      border: 2px solid rgba(255, 255, 255, 0.2);
-      color: white;
-      border-radius: 15px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    button:hover:not(:disabled) {
-      background: rgba(6, 158, 54, 0.758);
-      border-color: rgba(255, 255, 255, 0.4);
-      transform: translateY(-5px);
-    }
-
-    button:disabled {
-      background: rgba(0, 74, 11, 0.872);
-      border-color: rgba(255, 255, 255, 0.1);
-      cursor: not-allowed;
-    }
-
-    .footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: white;
-      text-align: center;
-      padding: 10px 0;
-      font-size: 14px;
-      backdrop-filter: blur(5px);
-      z-index: 1000;
-    }
-
-    .confirmation {
-      display: none;
-      margin-top: 1rem;
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    #statusMessage {
-      color: var(--error-color); /* Warna merah */
-      background: rgb(255, 255, 255); /* Background semi-transparan */
-      padding: 3px; /* Tambahkan padding */
-      border-radius: 10px; /* Bulatkan sudut */
-      font-size: 1rem; /* Perbesar ukuran font */
-      margin-top: 1rem;
-    }
-    #loading {
-      display: none;
-      margin-top: 1rem;
-      font-size: 1.2rem;
-    }
-
-    #loading i {
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        padding: 1rem;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      .button-container {
-        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="script.js">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="curve">
     <h1>Shahaba</h1>
     <h2>Sistem Pendataan Presensi</h2>
   </div>
-  <div class="container">
-    <h4><i class="fas fa-calendar-check"></i> Klik nama untuk mencatat presensi</h4>
-    <div class="button-container">
-      <div class="button-container">
-        <button onclick="presensi('Deva Mandela')">Deva Mandela</button>
-        <button onclick="presensi('Dwi Indo')">Dwi Indo</button>
-        <button onclick="presensi('Muchamad Rifqi Hermawan')">Muchamad Rifqi Hermawan</button>
-        <button onclick="presensi('Salma Siti Saffiyah')">Salma Siti Saffiyah</button>
-        <button onclick="presensi('Nurhayati')">Nurhayati</button>
-        <button onclick="presensi('Muharrom Susetyo Nugroho')">Muharrom Susetyo Nugroho</button>
-        <button onclick="presensi('Nandar Sunandar')">Nandar Sunandar</button>
-        <button onclick="presensi('Salma Satira Askar')">Salma Satira Askar</button>
-      </div>
-    </div>
-    <div id="loading">
-      <i class="fas fa-spinner"></i> Memproses...
-    </div>
-    <div id="confirmation" class="confirmation">
-      <h2><i class="fas fa-check-circle"></i> Pendataan Berhasil</h2>
-      <p id="confirmationMessage"></p>
-    </div>
-    <p id="statusMessage" style="margin-top: 1rem;"></p>
-  </div>
 
+  <div id="loadingScreen" class="loading-screen">
+    <div class="loading-content">
+        <h1> Versi terbaru telah tersedia </h1>
+        <p>
+            Update beberapa fitur berupa:
+        </p> <ul class="update-list">
+            <li>
+                <span class="update-point">Tombol Menu</span>
+                <span class="update-description">Akses ke fitur berikut:</span>
+                <br>
+                <ul class="nested-list">
+                    <li>
+                        <span class="update-point">Akurasi Tinggi dan Bersihkan Cache</span>
+                        <span class="update-description">Tingkatkan akurasi lokasidan bersihkan cache.</span>
+                    </li>
+                    <li>
+                        <span class="update-point">Halaman About</span>
+                        <span class="update-description">Informasi dan panduan penggunaan.</span>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <span class="update-point">Pengumuman</span>
+                <span class="update-description">Pemberitahuan resmi dari Admin.</span>
+            </li>
+            <li>
+                <span class="update-point">Perbaikan Bug</span>
+                <span class="update-description">Perbaikan masalah teknis untuk stabilitas.</span>
+            </li>
+            <li>
+                <span class="update-point">Peningkatan Tampilan</span>
+                <span class="update-description">UI dan kompatibilitas ditingkatkan.</span>
+            </li>
+        </ul>
+        <p>Beralih ke halaman baru dalam <span id="countdown">15</span> detik...</p>
+        <div class="loader"></div>
+    </div>
+</div>
   <footer class="footer">
-    &copy; 2025 Shahaba SD & Prasekolah. All rights reserved.
+    &copy; 2025 Shahaba SD & Prasekolah
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script>
-// Langsung kirim IP ke Apps Script tanpa menampilkan ke user
-const buttons = document.querySelectorAll('button');
-const statusMessage = document.getElementById('statusMessage');
-const confirmation = document.getElementById('confirmation');
-const confirmationMessage = document.getElementById('confirmationMessage');
-const loading = document.getElementById('loading');
-
-// Lokasi yang diizinkan
-const allowedLocations = [
-  { lat: -6.589108056587621, lng: 106.8218295143879 }, // Lokasi 1 (Shahaba Ruko Tanah Baru Residence)
-  { lat: -6.592279, lng: 106.822581 } // Lokasi 2 (Shahaba Jl. Swadaya)
-];
-
-// Fungsi untuk menghitung jarak antara dua koordinat (dalam meter)
-function calculateDistance(lat1, lon1, lat2, lon2) {
-  const R = 6371e3; // Radius bumi dalam meter
-  const φ1 = (lat1 * Math.PI) / 180;
-  const φ2 = (lat2 * Math.PI) / 180;
-  const Δφ = ((lat2 - lat1) * Math.PI) / 180;
-  const Δλ = ((lon2 - lon1) * Math.PI) / 180;
-
-  const a =
-    Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
-    Math.cos(φ1) * Math.cos(φ2) * Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
-  const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-
-  return R * c;
-}
-
-// Fungsi untuk memeriksa lokasi pengguna
-function checkLocation() {
-  return new Promise((resolve, reject) => {
-    if (!navigator.geolocation) {
-      reject("Geolocation tidak didukung di browser ini.");
-    } else {
-      navigator.geolocation.getCurrentPosition(
-        (position) => {
-          const userLat = position.coords.latitude;
-          const userLng = position.coords.longitude;
-
-          // Cek apakah pengguna berada dalam radius 30 meter dari salah satu lokasi yang diizinkan
-          const isWithinRadius = allowedLocations.some(
-            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 30
-          );
-
-          if (isWithinRadius) {
-            resolve();
-          } else {
-            reject("Anda berada di luar lokasi yang diizinkan.");
-          }
-        },
-        (error) => {
-          // Pesan error jika pengguna tidak mengizinkan akses lokasi
-          if (error.code === error.PERMISSION_DENIED) {
-            reject("Anda tidak mengizinkan akses lokasi. Harap aktifkan izin lokasi.");
-          } else {
-            reject("Gagal mendapatkan lokasi: " + error.message);
-          }
-        }
-      );
-    }
-  });
-}
-
-// Fungsi untuk mendapatkan alamat IP
-async function getIPAddress() {
-  try {
-    const response = await fetch('https://api.ipify.org?format=json');
-    const data = await response.json();
-    return data.ip;
-  } catch (error) {
-    console.error("Gagal mendapatkan alamat IP:", error);
-    return null;
-  }
-}
-
-// Fungsi untuk memeriksa status tombol dari spreadsheet
-async function getButtonStatus() {
-  try {
-    const response = await fetch(
-      `https://script.google.com/macros/s/AKfycbxiONB6ZxClTKwoD-GMJU2vp-rgdDFfEaFfAG3zyAqWchh_XWrsYDlqiX_2P12zNn0D2g/exec?action=getStatus`
-    );
-    const data = await response.json();
-    return data;
-  } catch (error) {
-    console.error("Gagal memeriksa status tombol:", error);
-    return {};
-  }
-}
-
-// Fungsi untuk menonaktifkan tombol berdasarkan status
-async function updateButtonStatus() {
-  const status = await getButtonStatus();
-  const buttons = document.querySelectorAll('button');
-
-  buttons.forEach(button => {
-    const nama = button.innerText;
-    const waktu = new Date().toLocaleTimeString();
-    if (status[nama] === "Nonaktif") {
-      button.disabled = true;
-      button.innerText = `${nama} ✓`;
-    }
-  });
-}
-
-// Fungsi presensi
-async function presensi(nama) {
-  const { isConfirmed } = await Swal.fire({
-    title: `Apakah Anda ${nama}?`,
-    text: "Pendataan presensi tidak dapat diwakilkan.",
-    icon: "question",
-    showCancelButton: true,
-    confirmButtonText: `Ya, Saya ${nama}`,
-    cancelButtonText: "Kembali",
-  });
-
-  if (!isConfirmed) {
-    return; // Batalkan jika pengguna memilih "Kembali"
-  }
-
-  const button = Array.from(buttons).find(btn => btn.innerText === nama);
-  button.disabled = true;
-  loading.style.display = 'block'; // Tampilkan loading indicator
-
-  try {
-    // Periksa lokasi pengguna
-    await checkLocation();
-
-    // Kirim data ke Google Apps Script
-    const ip = await getIPAddress();
-    const response = await fetch(
-      `https://script.google.com/macros/s/AKfycbxiONB6ZxClTKwoD-GMJU2vp-rgdDFfEaFfAG3zyAqWchh_XWrsYDlqiX_2P12zNn0D2g/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`
-    );
-    const result = await response.text();
-
-    // Tampilkan pesan sukses dengan SweetAlert2
-    await Swal.fire({
-      icon: 'success',
-      title: 'Syukran!',
-      text: `Presensi ${nama} telah dicatat.`,
-    });
-
-    // Update tampilan tombol
-    const waktu = new Date().toLocaleTimeString();
-    button.innerText = `${nama} ✓`;
-    confirmationMessage.innerText = `${nama} pukul ${waktu}`;
-    confirmation.style.display = 'block';
-    statusMessage.innerText = "";
-  } catch (error) {
-    // Tampilkan pesan error
-    statusMessage.innerText = error;
-    statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color');
-    button.disabled = false;
-  } finally {
-    loading.style.display = 'none'; // Sembunyikan loading indicator
-  }
-}
-
-// Periksa status tombol saat halaman dimuat
-window.onload = async () => {
-  await updateButtonStatus();
-  // Periksa status tombol setiap 5 detik
-  setInterval(updateButtonStatus, 5000);
-};
-  </script>
 </body>
 </html>
