--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <div class="loading-content">
         <h1> Versi terbaru telah tersedia </h1>
         <p>
-            Update beberapa fitur berupa:
+            Halaman akan beralih otomatis
+            </p>
+            <p>
+            Informasi beberapa fitur baru:
         </p> <ul class="update-list">
             <li>
                 <span class="update-point">Tombol Menu</span>
@@ -51,7 +54,7 @@
                 <span class="update-description">UI dan kompatibilitas ditingkatkan.</span>
             </li>
         </ul>
-        <p>Beralih ke halaman baru dalam <span id="countdown">15</span> detik...</p>
+        <p>Beralih ke halaman baru dalam <span id="countdown">13</span> detik...</p>
         <div class="loader"></div>
     </div>
 </div>
