--- a/index.html
+++ b/index.html
@@ -20,40 +20,7 @@
   <div id="loadingScreen" class="loading-screen">
     <div class="loading-content">
         <h1> Versi terbaru telah tersedia </h1>
-        <p>
-            Halaman akan beralih otomatis
-            </p>
-            <p>
-            Informasi beberapa fitur baru:
-        </p> <ul class="update-list">
-            <li>
-                <span class="update-point">Tombol Menu</span>
-                <span class="update-description">Akses ke fitur berikut:</span>
-                <br>
-                <ul class="nested-list">
-                    <li>
-                        <span class="update-point">Akurasi Tinggi dan Bersihkan Cache</span>
-                        <span class="update-description">Tingkatkan akurasi lokasidan bersihkan cache.</span>
-                    </li>
-                    <li>
-                        <span class="update-point">Halaman About</span>
-                        <span class="update-description">Informasi dan panduan penggunaan.</span>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <span class="update-point">Pengumuman</span>
-                <span class="update-description">Pemberitahuan resmi dari Admin.</span>
-            </li>
-            <li>
-                <span class="update-point">Perbaikan Bug</span>
-                <span class="update-description">Perbaikan masalah teknis untuk stabilitas.</span>
-            </li>
-            <li>
-                <span class="update-point">Peningkatan Tampilan</span>
-                <span class="update-description">UI dan kompatibilitas ditingkatkan.</span>
-            </li>
-        </ul>
+        <h3>Halaman akan beralih otomatis</h3>
         <p>Beralih ke halaman baru dalam <span id="countdown">13</span> detik...</p>
         <div class="loader"></div>
     </div>
